plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.7.21'
}

version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.assertj:assertj-core:3.22.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

test {
    useJUnitPlatform()
}
